--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello MVC</title>
+    <title>FPT Shopping</title>
 </head>
+    {{> head}}
 <body>
-    <h1>Hello MVC</h1>
+    {{> header}}
+
+
     <ul>
         <li><a href="/admin">Admin home</a></li>
         <li><a href="/admin/addUser">Add user in Admin controller</a></li>
     </ul>
 </body>
+
+     {{> footer}}
 </html>
