--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -33,7 +33,7 @@
                             </button>
                         </div>
                     </div>
-                    <a class="btn btn-success btn-sm ml-3" href="cart.html">
+                    <a class="btn btn-success btn-sm ml-3" href="">
                         <i class="fa fa-shopping-cart"></i> Cart
                         <span class="badge badge-light">3</span>
                     </a>
