update controller auth

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,16 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FPT Shopping</title>
 </head>
-    {{> head}}
+   
 <body>
-    {{> header}}
-    
-
-    <ul>
-        <li><a href="/admin">Admin home</a></li>
-        <li><a href="/admin/addUser">Add user in Admin controller</a></li>
-    </ul>
+    <h1>Đây là trang home</h1>
 </body>
-
-     {{> footer}}
 </html>
