--- a/views/index.hbs
+++ b/views/index.hbs
@@ -43,21 +43,8 @@
 						</li>
 						<li>
 							<div class="cart dropdown">
-						  		<a data-toggle="dropdown" href="/shoppingcart"><i class="fa fa-shopping-cart"></i>Cart(1)</a>
-					  			<div class="dropdown-menu dropup">
-					  				<span class="caret"></span>
-						  			<ul class="media-list">
-								  		<li class="media">
-										    <img class="pull-left" src="images/product-item.jpg" alt="">
-										    <div class="media-body">
-										      	<h6>Italian Sauce
-								    				<span>$250</span>
-								    			</h6>
-								    		</div>
-								  		</li>
-									</ul>
-									<button class="btn btn-primary btn-sm">Checkout</button>
-							    </div>
+						  		<a data-toggle="dropdown" href="/shoppingcart"><i class="fa fa-shopping-cart"></i>Cart</a>		  
+										    
 							</div>
 						</li>
 					</ul>
@@ -158,15 +145,15 @@
             <div class="row">
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                  <a class="catagotie-head" href="blog-single.html">
-                    <img src="images/category-image-1.jpg" alt="...">
-                    <h3>Beef Steak</h3>
+                  <a class="catagotie-head" href="/bookDetail">
+                    <img src="images/shine8.jpg" alt="...">
+                    <h3>Shine Tập 1</h3>
                   </a>
                   <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, aut, esse, laborum placeat id
-                      illo a expedita aperiam...</p>
+                    <p>Crayon Shin-chan (tên tiếng Việt: Shin-cậu bé bút chì) của tác giả Yoshito Usui là một trong những bộ manga nổi tiếng của Nhật Bản. 
+                      Sau khi tập 50 được xuất bản tại Nhật...</p>
                     <p>
-                      <a href="blog-single.html" class="btn btn-default btn-transparent" role="button">
+                      <a href="/bookDetail" class="btn btn-default btn-transparent" role="button">
                         <span>Check Items</span>
                       </a>
                     </p>
@@ -175,15 +162,15 @@
               </div> <!-- End of /.col-sm-6 col-md-4 -->
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                  <a class="catagotie-head" href="blog-single.html">
-                    <img src="images/category-image-2.jpg" alt="...">
-                    <h3>Miscellaneous</h3>
+                  <a class="catagotie-head" href="/bookDetail">
+                    <img src="images/shine4.jpg" alt="...">
+                    <h3>Shine Tập 2</h3>
                   </a>
                   <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, aut, esse, laborum placeat id
-                      illo a expedita aperiam...</p>
+                    <p>Về hình thức thể hiện, tác giả sử dụng bút pháp đơn giản, thậm chí có vẻ ngây ngô hơn so với các bộ manga khác. 
+                      Nội dung truyện cũng đơn giản...</p>
                     <p>
-                      <a href="blog-single.html" class="btn btn-default btn-transparent" role="button">
+                      <a href="/bookDetail" class="btn btn-default btn-transparent" role="button">
                         <span>Check Items</span>
                       </a>
                     </p>
@@ -192,15 +179,16 @@
               </div> <!-- End of /.col-sm-6 col-md-4 -->
               <div class="col-sm-6 col-md-4">
                 <div class="thumbnail">
-                  <a class="catagotie-head" href="blog-single.html">
-                    <img src="images/category-image-3.jpg" alt="...">
-                    <h3>Elegant Apparel</h3>
+                  <a class="catagotie-head" href="/bookDetail">
+                    <img src="images/shine9.jpg" alt="...">
+                    <h3>Shine Tập 3</h3>
                   </a>
                   <div class="caption">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, aut, esse, laborum placeat id
-                      illo a expedita aperiam...</p>
+                    <p>Mỗi tập truyện khoảng 120 trang, nhưng cứ thử cầm lên xem, 
+                      bạn sẽ không thể rời mắt khỏi cuốn sách cho đến tận trang cuối cùng. 
+                      Với tài năng kể chuyện hấp dẫn....</p>
                     <p>
-                      <a href="blog-single.html" class="btn btn-default btn-transparent" role="button">
+                      <a href="/bookDetail" class="btn btn-default btn-transparent" role="button">
                         <span>Check Items</span>
                       </a>
                     </p>
@@ -232,142 +220,58 @@
       <div class="row">
         <div class="col-md-3">
           <div class="products">
-            <a href="single-product.html">
-              <img src="images/product-image.jpg" alt="">
+            <a href="/bookDetail">
+              <img src="images/shine8.jpg" alt="">
             </a>
-            <a href="single-product.html">
-              <h4>Amazing Italian Sauces</h4>
+            <a href="/bookDetail">
+              <h4> Shine cậu bé bút chì - tập 1 </h4>
             </a>
-            <p class="price">From: £69.99</p>
-            <a class="view-link shutter" href="#">
+            <p class="price">20.000VNĐ</p>
+            <a class="view-link shutter" href="/shoppingcart">
               <i class="fa fa-plus-circle"></i>Add To Cart</a>
           </div> <!-- End of /.products -->
         </div> <!-- End of /.col-md-3 -->
         <div class="col-md-3">
           <div class="products">
-            <a href="single-product.html">
-              <img src="images/product-image-2.jpg" alt="">
+            <a href="/bookDetail">
+              <img src="images/shine4.jpg" alt="">
             </a>
-            <a href="single-product.html">
-              <h4>Amazing Italian Sauces</h4>
+            <a href="/bookDetail">
+              <h4> Shine cậu bé bút chì - tập 2</h4>
             </a>
-            <p class="price">From: £69.99</p>
+            <p class="price">25.000VNĐ</p>
             <a class="view-link shutter" href="#">
               <i class="fa fa-plus-circle"></i>Add To Cart</a>
           </div> <!-- End of /.products -->
         </div> <!-- End Of Col-md-3 -->
         <div class="col-md-3">
           <div class="products">
-            <a href="single-product.html">
-              <img src="images/product-image-3.jpg" alt="">
+            <a href="/bookDetail">
+              <img src="images/shine1.jpg" alt="">
             </a>
-            <a href="single-product.html">
-              <h4>Amazing Italian Sauces</h4>
+            <a href="/bookDetail">
+              <h4>Shine cậu bé bút chì - tập 3</h4>
             </a>
-            <p class="price">From: £69.99</p>
+            <p class="price">30.000VNĐ</p>
             <a class="view-link shutter" href="#">
               <i class="fa fa-plus-circle"></i>Add To Cart</a>
           </div> <!-- End of /.products -->
         </div> <!-- End Of /.Col-md-3 -->
         <div class="col-md-3">
           <div class="products">
-            <a href="single-product.html">
-              <img src="images/product-image-4.jpg" alt="">
+            <a href="/bookDetail">
+              <img src="images/shine2.jpg" alt="">
             </a>
-            <a href="single-product.html">
-              <h4>Amazing Italian Sauces</h4>
+            <a href="/bookDetail">
+              <h4>Shine cậu bé bút chì - tập 4</h4>
             </a>
-            <p class="price">From: £69.99</p>
+            <p class="price">35.000VNĐ</p>
             <a class="view-link shutter" href="#">
               <i class="fa fa-plus-circle"></i>Add To Cart</a>
-          </div> <!-- End of /.products -->
-        </div> <!-- End Of /.Col-md-3 -->
-        <div class="col-md-3">
-          <div class="products">
-            <a href="single-product.html">
-              <img src="images/product-image-5.jpg" alt="">
-            </a>
-            <a href="single-product.html">
-              <h4>Amazing Italian Sauces</h4>
-            </a>
-            <p class="price">From: £69.99</p>
-            <a class="view-link shutter" href="#">
-              <i class="fa fa-plus-circle"></i>Add To Cart</a>
-          </div> <!-- End of /.products -->
-        </div> <!-- End Of /.Col-md-3 -->
-        <div class="col-md-3">
-          <div class="products">
-            <a href="single-product.html">
-              <img src="images/product-image-6.jpg" alt="">
-            </a>
-            <a href="single-product.html">
-              <h4>Amazing Italian Sauces</h4>
-            </a>
-            <p class="price">From: £69.99</p>
-            <a class="view-link shutter" href="#">
-              <i class="fa fa-plus-circle"></i>Add To Cart</a>
-          </div> <!-- End of /.products -->
-        </div> <!-- End Of /.Col-md-3 -->
-        <div class="col-md-3">
-          <div class="products">
-            <a href="single-product.html">
-              <img src="images/product-image-7.jpg" alt="">
-            </a>
-            <a href="single-product.html">
-              <h4>Amazing Italian Sauces</h4>
-            </a>
-            <p class="price">From: £69.99</p>
-            <a class="view-link shutter" href="#">
-              <i class="fa fa-plus-circle"></i>Add To Cart</a>
-          </div> <!-- End of /.products -->
-        </div> <!-- End Of /.Col-md-3 -->
-        <div class="col-md-3">
-          <div class="products">
-            <a href="single-product.html">
-              <img src="images/product-image-8.jpg" alt="">
-            </a>
-            <a href="single-product.html">
-              <h4>Amazing Italian Sauces</h4>
-            </a>
-            <p class="price">From: £69.99</p>
-            <div>
-              <a class="view-link shutter" href="#">
-                <i class="fa fa-plus-circle"></i>Add To Cart</a>
-            </div>
           </div> <!-- End of /.products -->
         </div> <!-- End Of /.Col-md-3 -->
       </div> <!-- End of /.row -->
     </div> <!-- End of /.container -->
-  </section> <!-- End of Section -->
-
-
-
-
-  <!-- CALL TO ACTION Start
-    ================================================== -->
-
-  <section id="call-to-area">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="block">
-            <div class="block-heading">
-              <h2>Our Partners</h2>
-            </div>
-          </div> <!-- End of /.block -->
-          <div id="owl-example" class="owl-carousel">
-            <div> <img src="images/company-1.png" alt=""></div>
-            <div> <img src="images/company-2.png" alt=""></div>
-            <div> <img src="images/company-3.png" alt=""></div>
-            <div> <img src="images/company-4.png" alt=""></div>
-            <div> <img src="images/company-5.png" alt=""></div>
-            <div> <img src="images/company-6.png" alt=""></div>
-            <div> <img src="images/company-8.png" alt=""></div>
-            <div> <img src="images/company-9.png" alt=""></div>
-          </div> <!-- End of /.Owl-Slider -->
-        </div> <!-- End of /.col-md-12 -->
-      </div> <!-- End Of /.Row -->
-    </div> <!-- End Of /.Container -->
   </section> <!-- End of Section -->
 
 
