view book detail
Nhưng mà chưa truyền được db vào vì đang lỗi nhé mn

--- a/views/bookDetail.hbs
+++ b/views/bookDetail.hbs
@@ -4,109 +4,106 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Product Card/Page</title>
+    <title>Product Card Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="product_Detail.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 </head>
 
 <body>
-
-    <div class="card-wrapper">
+    <div class="container">
         <div class="card">
-            <!-- card left -->
-            <div class="product-imgs">
-                <div class="img-display">
-                    <div class="img-showcase">
-                        <img src="{{details.pic}}"
-                            alt="">
-                    </div>
-                </div>
-                {{!-- <div class="img-select">
-                    <div class="img-item">
-                        <a href="#" data-id="1">
-                            <img src="shoes_images/shoe_1.jpg" alt="shoe image">
-                        </a>
-                    </div>
-                    <div class="img-item">
-                        <a href="#" data-id="2">
-                            <img src="shoes_images/shoe_2.jpg" alt="shoe image">
-                        </a>
-                    </div>
-                    <div class="img-item">
-                        <a href="#" data-id="3">
-                            <img src="shoes_images/shoe_3.jpg" alt="shoe image">
-                        </a>
-                    </div>
-                    <div class="img-item">
-                        <a href="#" data-id="4">
-                            <img src="shoes_images/shoe_4.jpg" alt="shoe image">
-                        </a>
-                    </div>
-                </div> --}}
-            </div>
-            <!-- card right -->
-            <div class="product-content">
-                <h2 class="product-title">{{details.name}}</h2>
-                <a href="#" class="product-link">visit FPTBOOK</a>
-                <div class="product-rating">
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                    <span>4.7(21)</span>
-                </div>
+            <div class="row">
+                <aside class="col-sm-5 border-right">
+                    <article class="gallery-wrap">
+                        <div class="img-big-wrap">
+                            <div> <a href="#"><img src="https://s9.postimg.org/tupxkvfj3/image.jpg"></a></div>
+                        </div> <!-- slider-product.// -->
+                        <div class="img-small-wrap">
+                            <div class="item-gallery"> <img src="https://s9.postimg.org/tupxkvfj3/image.jpg"> </div>
+                            <div class="item-gallery"> <img src="https://s9.postimg.org/tupxkvfj3/image.jpg"> </div>
+                            <div class="item-gallery"> <img src="https://s9.postimg.org/tupxkvfj3/image.jpg"> </div>
+                            <div class="item-gallery"> <img src="https://s9.postimg.org/tupxkvfj3/image.jpg"> </div>
+                        </div> <!-- slider-nav.// -->
+                    </article> <!-- gallery-wrap .end// -->
+                </aside>
+                <aside class="col-sm-7">
+                    <article class="card-body p-5">
+                        <h3 class="title mb-3">Original Version of Some product name</h3>
 
-                <div class="product-price">
-                    <p class="last-price">Old Price: <span>$257.00</span></p>
-                    <p class="new-price">New Price: <span>{{details.price}} VND</span></p>
-                </div>
+                        <p class="price-detail-wrap">
+                            <span class="price h3 text-warning">
+                                <span class="currency">US $</span><span class="num">1299</span>
+                            </span>
+                            <span>/per kg</span>
+                        </p> <!-- price-detail-wrap .// -->
+                        <dl class="item-property">
+                            <dt>Description</dt>
+                            <dd>
+                                <p>Here goes description consectetur adipisicing elit, sed do eiusmod
+                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                    quis nostrud exercitation ullamco </p>
+                            </dd>
+                        </dl>
+                        <dl class="param param-feature">
+                            <dt>Model#</dt>
+                            <dd>12345611</dd>
+                        </dl> <!-- item-property-hor .// -->
+                        <dl class="param param-feature">
+                            <dt>Color</dt>
+                            <dd>Black and white</dd>
+                        </dl> <!-- item-property-hor .// -->
+                        <dl class="param param-feature">
+                            <dt>Delivery</dt>
+                            <dd>Russia, USA, and Europe</dd>
+                        </dl> <!-- item-property-hor .// -->
 
-                <div class="product-detail">
-                    <h2>about this item: </h2>
-                    <p>{{details.des}}</p>
-                    <ul>
-                        <li>Available: <span>in stock</span></li>
-                        <li>Category: <span>{{category.name}}</span></li>
-                        <li>Shipping Area: <span>All over the world</span></li>
-                        <li>Shipping Fee: <span>Free</span></li>
-                    </ul>
-                </div>
-
-                <div class="purchase-info">
-                    <form action="/shoppingCart" method="POST">
-                    <input type="hidden" name="bookID" value="{{details._id}}">
-                    <button type="submit" class="btn">
-                        Add to Cart <i class="fas fa-shopping-cart"></i>
-                    </button>
-                    <a href="/shoppingCart/viewCart"><button type="button" class="btn">View Cart</button></a>
-                    <a href="/feedback?name={{details.name}}"><button type="button" class="btn">Feed back</button></a>
-                    </form>
-                    
-                </div>
-
-                <div class="social-links">
-                    <p>Share At: </p>
-                    <a href="#">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-whatsapp"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-pinterest"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-5">
+                                <dl class="param param-inline">
+                                    <dt>Quantity: </dt>
+                                    <dd>
+                                        <select class="form-control form-control-sm" style="width:70px;">
+                                            <option> 1 </option>
+                                            <option> 2 </option>
+                                            <option> 3 </option>
+                                        </select>
+                                    </dd>
+                                </dl> <!-- item-property .// -->
+                            </div> <!-- col.// -->
+                            <div class="col-sm-7">
+                                <dl class="param param-inline">
+                                    <dt>Size: </dt>
+                                    <dd>
+                                        <label class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio2" value="option2">
+                                            <span class="form-check-label">SM</span>
+                                        </label>
+                                        <label class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio2" value="option2">
+                                            <span class="form-check-label">MD</span>
+                                        </label>
+                                        <label class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio2" value="option2">
+                                            <span class="form-check-label">XXL</span>
+                                        </label>
+                                    </dd>
+                                </dl> <!-- item-property .// -->
+                            </div> <!-- col.// -->
+                        </div> <!-- row.// -->
+                        <hr>
+                        <a href="#" class="btn btn-lg btn-primary text-uppercase"> Buy now </a>
+                        <a href="#" class="btn btn-lg btn-outline-primary text-uppercase"> <i
+                                class="fas fa-shopping-cart"></i> Add to cart </a>
+                    </article> <!-- card-body.// -->
+                </aside> <!-- col.// -->
+            </div> <!-- row.// -->
+        </div> <!-- card.// -->
     </div>
+
 </body>
 
 </html>
