--- a/views/customer/bookDetail.hbs
+++ b/views/customer/bookDetail.hbs
@@ -9,6 +9,7 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 </head>
 
+{{> customerHeader}}
 <body>
     <div class="container">
         <div class="card">
@@ -16,45 +17,34 @@
                 <aside class="col-sm-5 border-right">
                     <article class="gallery-wrap">
                         <div class="img-big-wrap">
-                            <div> <a href="#"><img src="https://s9.postimg.org/tupxkvfj3/image.jpg"></a></div>
+                            <div> <a href="#"><img src="../{{bookDetail.img}}" width="auto", height="auto"></a></div>
                         </div> <!-- slider-product.// -->
-                        <div class="img-small-wrap">
+                        {{!-- <div class="img-small-wrap">
                             <div class="item-gallery"> <img src="https://s9.postimg.org/tupxkvfj3/image.jpg"> </div>
                             <div class="item-gallery"> <img src="https://s9.postimg.org/tupxkvfj3/image.jpg"> </div>
                             <div class="item-gallery"> <img src="https://s9.postimg.org/tupxkvfj3/image.jpg"> </div>
                             <div class="item-gallery"> <img src="https://s9.postimg.org/tupxkvfj3/image.jpg"> </div>
-                        </div> <!-- slider-nav.// -->
+                        </div> <!-- slider-nav.// --> --}}
                     </article> <!-- gallery-wrap .end// -->
                 </aside>
                 <aside class="col-sm-7">
                     <article class="card-body p-5">
-                        <h3 class="title mb-3">Original Version of Some product name</h3>
+                        <h3 class="title mb-3">{{bookDetail.name}}</h3>
 
                         <p class="price-detail-wrap">
                             <span class="price h3 text-warning">
-                                <span class="currency">US $</span><span class="num">1299</span>
+                                <span class="num">{{bookDetail.price}}</span>
                             </span>
-                            <span>/per kg</span>
                         </p> <!-- price-detail-wrap .// -->
                         <dl class="item-property">
                             <dt>Description</dt>
                             <dd>
-                                <p>Here goes description consectetur adipisicing elit, sed do eiusmod
-                                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                    quis nostrud exercitation ullamco </p>
+                                <p>{{bookDetail.description}}</p>
                             </dd>
                         </dl>
                         <dl class="param param-feature">
-                            <dt>Model#</dt>
-                            <dd>12345611</dd>
-                        </dl> <!-- item-property-hor .// -->
-                        <dl class="param param-feature">
-                            <dt>Color</dt>
-                            <dd>Black and white</dd>
-                        </dl> <!-- item-property-hor .// -->
-                        <dl class="param param-feature">
-                            <dt>Delivery</dt>
-                            <dd>Russia, USA, and Europe</dd>
+                            <dt>Quantity</dt>
+                            <dd>{{bookDetail.quantity}}</dd>
                         </dl> <!-- item-property-hor .// -->
 
                         <hr>
