--- a/views/partials/customerHeader.hbs
+++ b/views/partials/customerHeader.hbs
@@ -1,6 +1,5 @@
-<header>
-    	
-	<section id="top">
+<div>
+    <section id="top">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-7">
@@ -9,9 +8,9 @@
 				<div class="col-md-3 clearfix">
 					<ul class="login-cart">
 						<li>
-							<a data-toggle="modal" data-target="#myModal" href="/login">
+							<a data-toggle="modal" data-target="#myModal" href="#">
 							<i class="fa fa-user"></i>
-								Login
+								Customer
 							</a>
 						</li>
 						<li>
@@ -34,5 +33,5 @@
 				</div>
 			</div> <!-- End Of /.row -->
 		</div>	<!-- End Of /.Container -->
-</header>	
+</div>
 	
