update shoppingcart lan 1

--- a/views/partials/customerHeader.hbs
+++ b/views/partials/customerHeader.hbs
@@ -15,8 +15,7 @@
 						</li>
 						<li>
 							<div class="cart dropdown">
-						  		<a data-toggle="dropdown" href="/shoppingcart"><i class="fa fa-shopping-cart"></i>Cart</a>		  
-										    
+						  		<a data-toggle="dropdown" href="/customer/orderDetail"><i class="fa fa-shopping-cart"></i>Cart</a>		  
 							</div>
 						</li>
 					</ul>
