--- a/views/customer/bookDetail.hbs
+++ b/views/customer/bookDetail.hbs
@@ -33,7 +33,7 @@
 
                         <p class="price-detail-wrap">
                             <span class="price h3 text-warning">
-                                <span class="num">{{bookDetail.price}}</span>
+                                <span class="num">{{bookDetail.price}}VNĐ</span>
                             </span>
                         </p> <!-- price-detail-wrap .// -->
                         <dl class="item-property">
