--- a/views/customer/bookDetail.hbs
+++ b/views/customer/bookDetail.hbs
@@ -10,6 +10,7 @@
 </head>
 
 {{> customerHeader}}
+
 <body>
     <div class="container">
         <div class="card">
@@ -17,7 +18,7 @@
                 <aside class="col-sm-5 border-right">
                     <article class="gallery-wrap">
                         <div class="img-big-wrap">
-                            <div> <a href="#"><img src="../{{bookDetail.img}}" width="auto", height="auto"></a></div>
+                            <div> <a href="#"><img src="../{{bookDetail.img}}" width="auto" , height="auto"></a></div>
                         </div> <!-- slider-product.// -->
                         {{!-- <div class="img-small-wrap">
                             <div class="item-gallery"> <img src="https://s9.postimg.org/tupxkvfj3/image.jpg"> </div>
@@ -28,7 +29,7 @@
                     </article> <!-- gallery-wrap .end// -->
                 </aside>
                 <aside class="col-sm-7">
-                    <article class="card-body p-5">
+                    <div class="card-body p-5">
                         <h3 class="title mb-3">{{bookDetail.name}}</h3>
 
                         <p class="price-detail-wrap">
@@ -48,46 +49,28 @@
                         </dl> <!-- item-property-hor .// -->
 
                         <hr>
-                        <div class="row">
-                            <div class="col-sm-5">
-                                <dl class="param param-inline">
-                                    <dt>Quantity: </dt>
-                                    <dd>
-                                        <select class="form-control form-control-sm" style="width:70px;">
-                                            <option> 1 </option>
-                                            <option> 2 </option>
-                                            <option> 3 </option>
-                                        </select>
-                                    </dd>
-                                </dl> <!-- item-property .// -->
-                            </div> <!-- col.// -->
-                            <div class="col-sm-7">
-                                <dl class="param param-inline">
-                                    <dt>Size: </dt>
-                                    <dd>
-                                        <label class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                id="inlineRadio2" value="option2">
-                                            <span class="form-check-label">SM</span>
-                                        </label>
-                                        <label class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                id="inlineRadio2" value="option2">
-                                            <span class="form-check-label">MD</span>
-                                        </label>
-                                        <label class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                id="inlineRadio2" value="option2">
-                                            <span class="form-check-label">XXL</span>
-                                        </label>
-                                    </dd>
-                                </dl> <!-- item-property .// -->
-                            </div> <!-- col.// -->
-                        </div> <!-- row.// -->
-                        <hr>
-                        <a href="#" class="btn btn-lg btn-primary text-uppercase"> Buy now </a>
-                        <a href="#" class="btn btn-lg btn-outline-primary text-uppercase"> <i
-                                class="fas fa-shopping-cart"></i> Add to cart </a>
+                        <form action="/customer/doAddToCart" method="post">
+                            <div class="row">
+                                <div class="col-sm-5">
+                                    <dl class="param param-inline">
+                                        <dt>Quantity: </dt>
+                                        <dd>
+                                            <select name="quantity" class="form-control form-control-sm"
+                                                style="width:70px;">
+                                                <option value=1> 1 </option>
+                                                <option value=2> 2 </option>
+                                                <option value=3> 3 </option>
+                                            </select>
+                                        </dd>
+                                    </dl> <!-- item-property .// -->
+                                </div> <!-- col.// -->
+                            </div> <!-- row.// -->
+                            <hr>
+                            <input type="hidden" name="id" value={{_id}}> </input>
+                            <a href="#" class="btn btn-lg btn-primary text-uppercase"> Continue Buying</a>
+                            <input type="submit" value="Add to cart" class="btn btn-lg btn-outline-primary text-uppercase"> </input>
+                        </form>
+                    </div>
                     </article> <!-- card-body.// -->
                 </aside> <!-- col.// -->
             </div> <!-- row.// -->
