--- a/views/partials/customerHeader.hbs
+++ b/views/partials/customerHeader.hbs
@@ -1,3 +1,23 @@
+<head>
+  <meta charset="UTF-8">
+  <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+  <!-- Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700' rel='stylesheet' type='text/css'>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+
+  <!-- Css -->
+  <link rel="stylesheet" href="css/nivo-slider.css" type="text/css" />
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
+
+
+</head>
 <div>
     <section id="top">
 		<div class="container">
@@ -18,6 +38,13 @@
 						  		<a data-toggle="dropdown" href="/customer/orderDetail"><i class="fa fa-shopping-cart"></i>Cart</a>		  
 							</div>
 						</li>
+						
+							<li>
+								<div class="cart dropdown">
+									<a data-toggle="dropdown" href="/login"><i class="fa fa-right-from-bracket"></i>Logout</a>		  
+								</div>
+							</li>
+						
 					</ul>
 				</div>
 				<div class="col-md-2">
